tests/fixtures/errors/postprocess/variants/return-undefined/postprocess.js
module.exports = () => {
  process.stderr.write("Stderr!");
};
